--- a/package.json
+++ b/package.json
@@ -12,18 +12,34 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "style-loader": "^0.19.1",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
     "antd": "^3.1.4",
+    "aphrodite": "^1.2.5",
+    "apollo-client-preset": "^1.0.8",
+    "apollo-link-context": "^1.0.3",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-apollo": "^2.0.4",
+    "react-dom": "^16.2.0",
+    "react-dropdown": "^1.3.6",
+    "react-lite": "^0.15.39",
+    "react-router-dom": "^4.2.2",
+    "react-tabs": "^2.2.1",
+    "react-with-styles": "^2.4.0",
+    "react-with-styles-interface-aphrodite": "^3.1.1",
+    "recompose": "^0.26.0"
   }
 }
