provisional production site

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "JimZer <jimi.vaubien@protonmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --host 0.0.0.0 --port 80"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
