--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql-tag": "^2.6.1",
     "lodash": "^4.17.5",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-dropdown": "^1.3.6",
