--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "aphrodite": "^1.2.5",
     "apollo-client-preset": "^1.0.8",
     "apollo-link-context": "^1.0.3",
+    "chart.js": "^2.7.2",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.0.4",
+    "react-chartjs-2": "^2.7.0",
     "react-dom": "^16.2.0",
     "react-dropdown": "^1.3.6",
     "react-lite": "^0.15.39",
