--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.2.2",
+    "url-loader": "^1.0.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   },
