--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "JimZer <jimi.vaubien@protonmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "webpack",
+    "serve": "babel-node server.js",
     "start": "webpack-dev-server --host 0.0.0.0 --port 80"
   },
   "devDependencies": {
@@ -28,6 +30,7 @@
     "aphrodite": "^1.2.5",
     "apollo-client-preset": "^1.0.8",
     "apollo-link-context": "^1.0.3",
+    "express": "^4.16.3",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "lodash": "^4.17.5",
