--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.2.0",
     "react-dropdown": "^1.3.6",
     "react-lite": "^0.15.39",
+    "react-lottie": "^1.1.0",
     "react-router-dom": "^4.2.2",
     "react-tabs": "^2.2.1",
     "react-with-styles": "^2.4.0",
