--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "apollo-client-preset": "^1.0.8",
     "apollo-link-context": "^1.0.3",
     "chart.js": "^2.7.2",
+    "color-between": "^1.0.2",
+    "d3-geo": "^1.10.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
     "lodash": "^4.17.5",
@@ -42,9 +44,11 @@
     "react-dropdown": "^1.3.6",
     "react-lite": "^0.15.39",
     "react-router-dom": "^4.2.2",
+    "react-simple-maps": "^0.12.1",
     "react-tabs": "^2.2.1",
     "react-with-styles": "^2.4.0",
     "react-with-styles-interface-aphrodite": "^3.1.1",
-    "recompose": "^0.26.0"
+    "recompose": "^0.26.0",
+    "topojson-simplify": "^3.0.2"
   }
 }
