--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "path": "^0.12.7",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "url-loader": "^1.0.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^4.15.1",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "antd": "^3.1.4",
@@ -44,11 +45,12 @@
     "react-dom": "^16.2.0",
     "react-dropdown": "^1.3.6",
     "react-lite": "^0.15.39",
-    "react-lottie": "^1.1.0",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^4.2.2",
     "react-tabs": "^2.2.1",
     "react-with-styles": "^2.4.0",
     "react-with-styles-interface-aphrodite": "^3.1.1",
-    "recompose": "^0.26.0"
+    "recompose": "^0.26.0",
+    "webpack-merge": "^4.1.3"
   }
 }
