--- a/package.json
+++ b/package.json
@@ -3,21 +3,29 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/DataBridge/Web-DataBridge",
-  "author": "JimZer <jimi.vaubien@protonmail.com>",
+  "author": "MonsieurWave, JimZer <jimi.vaubien@protonmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "webpack",
+    "lint": "node node_modules/eslint/bin/eslint.js src/",
     "serve": "babel-node server.js",
-    "start": "webpack-dev-server --host 0.0.0.0 --port 9090"
+    "start": "webpack-dev-server --host 0.0.0.0 --port 9091"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.6.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "eslint": "^4",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
     "html-webpack-plugin": "^2.30.1",
     "path": "^0.12.7",
     "style-loader": "^0.19.1",
@@ -29,8 +37,11 @@
   "dependencies": {
     "antd": "^3.1.4",
     "aphrodite": "^1.2.5",
+    "apollo-cache-inmemory": "^1.2.6",
+    "apollo-client": "^2.3.7",
     "apollo-client-preset": "^1.0.8",
     "apollo-link-context": "^1.0.3",
+    "apollo-link-http": "^1.5.4",
     "chart.js": "^2.7.2",
     "color-between": "^1.0.2",
     "d3-geo": "^1.10.0",
